stack/redis/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: stack
  annotations:
    argocd.argoproj.io/sync-wave: "0"
