stack/redis/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: redis-data
  namespace: stack
  labels:
    app.kubernetes.io/name: redis-stack
    app.kubernetes.io/instance: redis-stack
    app.kubernetes.io/part-of: stack
    app.kubernetes.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`redis-stack.lab`)
      services:
        - name: redis-stack
          port: 6379
  tls:
    secretName: monster-server-cert
    options:
      name: mtls-strict
      namespace: traefik
